--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -27,6 +27,19 @@
   transition: transform .2s;
 }
 
+.task__content {
+  margin-right: 10px;
+}
+
+.task__description {
+  margin-bottom: 5px;
+}
+
+.task__title {
+  border-bottom: 1px solid #a5a5a5;
+  
+}
+
 .task:hover {
   transform: scale(105%);
 }
@@ -40,3 +53,30 @@
   margin-bottom: 10px;
 }
 
+.page__wrapper {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+.page {
+  color: #fff;
+  background: teal;
+  padding: 15px;
+  margin-right: 5px;
+  margin-bottom: 15px;
+  cursor: pointer;
+}
+
+.page:hover {
+  opacity: .8;
+}
+
+.page__current {
+  border: 2px solid orange;
+  font-weight: bold;
+}
+
+.page__inner {
+  border: 1px solid teal;
+}
