--- a/src/components/form/SimpleForm.module.css
+++ b/src/components/form/SimpleForm.module.css
@@ -1,13 +1,51 @@
-
-label {
-    display: block;
-    font-size: larger;
-    padding: 5px;
+.myLabel {
+  display: block;
+  font-size: larger;
+  padding: 5px;
 }
 
-input {
-    font-size: larger;
-    padding: 5px;
-    margin: 2px;
+.myInput {
+  font-size: larger;
+  padding: 5px;
+  margin-bottom: 8px;
 }
 
+.myForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+}
+
+.formInner {
+  border: 1px solid #a28089;
+  padding: 20px;
+  border-radius: 8%;
+  background: #a28089;
+  height: 400px;
+
+  text-align: center;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+.myBtn {
+  padding: 8px;
+  width: 100%;
+  max-width: 250px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-bottom: 10px;
+  background: #8458b3;
+  font-size: 14px;
+}
+
+.myBtn:hover {
+  background: #6d4894;
+}
+
+.message {
+  font-size: 14px;
+  font-weight: 600;
+  color: red;
+}
