--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,8 +6,10 @@
 
 #root {
   display: flex;
-  justify-content: center;
-}
+  flex-direction: column;
+  align-items: center;
+  background: #a0d2eb;
+} 
 
 .App {
   width: 800px;
@@ -18,9 +20,12 @@
   justify-content: space-between;
   align-items: center;
   padding: 15px;
-  border: 2px solid rgb(0, 107, 107);
+  border: 2px solid #8458B3;
   border-radius: 10px;
   margin-top: 15px;
+  background: #8458B3;
+  background: #fff;
+
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 
 
@@ -61,10 +66,11 @@
 
 .page {
   color: #fff;
-  background: teal;
+  background: #8458B3;
   padding: 15px;
   margin-right: 5px;
   margin-bottom: 15px;
+  border-radius: 5px;
   cursor: pointer;
 }
 
