--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,15 +4,23 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: #a0d2eb;
+}
+
 #root {
   display: flex;
   flex-direction: column;
   align-items: center;
   background: #a0d2eb;
+  position: relative;
 } 
 
 .App {
   width: 800px;
+  height: 100%;
+  min-height: 680px;
+  margin-bottom: 50px;
 }
 
 .task {
@@ -58,10 +66,23 @@
   margin-bottom: 10px;
 }
 
+/* .tasksList {
+  overflow: hidden;
+  padding: 20px;
+  height: 2500px;
+  /* position: fixed; */
+
+
 .page__wrapper {
   margin-top: 30px;
-  display: flex;
-  justify-content: center;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
 
 .page {
